# hermes-maintainer

./: .gitignore  IMPLEMENTATION_GUIDE.md  config.example.yaml  pyproject.toml
scripts/: hermes-healthcheck.py
src/hermes_maintainer/: __init__.py  cli.py  config.py  diagnose.py  github_issue.py  monitor.py  repair.py  report.py  safety.py  updater.py  watchdog.py
tests/: test_cli.py  test_config.py  test_diagnose.py  test_monitor.py  test_repair.py  test_safety.py  test_updater.py  test_watchdog.py
