[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-maintainer"
version = "0.2.0"
description = "Hermes Agent lifecycle manager — monitor, diagnose, repair, and update"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
hermes-maintainer = "hermes_maintainer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
